--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '{your-app-id}',
+      appId      : '{2607093985999365}',
       cookie     : true,
       xfbml      : true,
-      version    : '{api-version}'
+      version    : '{v3.2}'
     });
       
     FB.AppEvents.logPageView();   
