--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
   
+  <fb:login-button 
+  scope="public_profile,email"
+  onlogin="checkLoginState();">
+</fb:login-button>
+  
 <a>survey</a>
 </html>
