--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  
+  <body>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -35,7 +35,7 @@
   scope="public_profile,email"
   onlogin="checkLoginState();">
 </fb:login-button>
-  
+  </body>
 <a>survey</a>
   
   <div class="fb-login-button" data-size="large" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="false"></div>
